lib_LTLIBRARIES = libinfra.la

infradir = $(includedir)/infra

infra_HEADERS = 		\
infra/Task.h			\
infra/Thread.h			\
infra/ThreadAgent.h		\
infra/ThreadPool.h		\
infra/Mutex.h			\
infra/ExampleTask.h		\
infra/Behavior.h		\
infra/Character.h		\
infra/Queue.h

libinfra_la_SOURCES =		\
ThreadPool.cpp			\
Thread.cpp			\
Mutex.cpp			\
ExampleTask.cpp

libinfra_la_LIBADD =		\
-lpthread

