lib_LTLIBRARIES = libstate.la

statedir = $(includedir)/state

state_HEADERS = 		\
state/BroadCaster.h		\
state/EventManager.h		\
state/MultiCaster.h		\
state/ICaster.h			\
state/IEvent.h			\
state/IActioner.h		\
state/IReceiver.h		\
state/Route.h			\
state/RouteTable.h		\
state/SingleCaster.h		\
state/State.h			\
state/StateManager.h

libstate_la_SOURCES =		\
BroadCaster.cpp			\
EventManager.cpp		\
MultiCaster.cpp			\
Route.cpp			\
RouteTable.cpp			\
SingleCaster.cpp		\
State.cpp			\
StateManager.h

