lib_LTLIBRARIES = libstate.la

statedir = $(includedir)/state

state_HEADERS = 		\
state/BroadCaster.h		\
state/ByteStream.h		\
state/EventManager.h		\
state/MaskMessageEvent.h	\
state/MultiCaster.h		\
state/ICaster.h			\
state/IEvent.h			\
state/IActioner.h		\
state/IReceiver.h		\
state/ISerializable.h		\
state/PrintActioner.h		\
state/Route.h			\
state/RouteTable.h		\
state/SingleCaster.h		\
state/State.h			\
state/StateManager.h		\
state/UDPReceiverState.h	\
state/UDPSenderActioner.h

libstate_la_SOURCES =		\
BroadCaster.cpp			\
ByteStream.cpp			\
EventManager.cpp		\
MaskMessageEvent.cpp		\
MultiCaster.cpp			\
IEvent.cpp			\
PrintActioner.cpp		\
Route.cpp			\
RouteTable.cpp			\
SingleCaster.cpp		\
State.cpp			\
StateManager.cpp		\
UDPReceiverState.cpp		\
UDPSenderActioner.cpp

